--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,4 @@ before_script:
 # Skip the default mvn command because we want to set the profile explicitly
 install: true
 script:
-  - mvn -e -Ppackagecloud test
-  - mvn -e -Ppackagecloud -Dpostgres.database.url=jdbc:postgresql:test -Dpostgres.database.user=test -Dpostgres.database.password=test -P postgresql test
-  - cp .travis.settings.xml $HOME/.m2/settings.xml && mvn -e -Ppackagecloud -DskipTests deploy
-after_failure:
-  - echo "\n=== SUREFIRE REPORTS ===\n"
-  - for F in target/surefire-reports/*.txt; do echo $F; cat $F; echo; done
+  - mvn -DskipTests -P postgresql clean package
