--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,10 @@ before_script:
 # Skip the default mvn command because we want to set the profile explicitly
 install: true
 script:
-  - mvn -DskipTests -P postgresql clean package
+  - mvn -DskipTests -P packagecloud clean package
+  # - mvn -DskipTests -P postgresql clean package  -> 
+  # [ERROR] Failed to execute goal on project database-goodies: 
+  # Could not resolve dependencies for project com.github.susom:database-goodies:jar:1.1-SNAPSHOT:
+  # Could not find artifact com.github.susom:database:jar:3.0-SNAPSHOT in sonatype-snapshots
+  # (https://oss.sonatype.org/content/repositories/snapshots/) -> [Help 1]
+  
