--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,19 @@
 language: java
 jdk:
   - oraclejdk8
-addons:
-  postgresql: "9.3"
-before_script:
-  - psql -U postgres -c "create user test with password 'test';"
-  - psql -c 'create database test owner test;' -U postgres
+#addons:
+#  postgresql: "9.3"
+#before_script:
+#  - psql -U postgres -c "create user test with password 'test';"
+#  - psql -c 'create database test owner test;' -U postgres
 # Skip the default mvn command because we want to set the profile explicitly
 install: true
 script:
+  mvn -e -Dpostgres.database.url=jdbc:postgresql:test -Dpostgres.database.user=test -Dpostgres.database.password=test -P postgresql test
+  
+    
   # - mvn -DskipTests -P packagecloud clean package -> pass
-   - mvn -DskipTests -P oracle12 clean package
+  # - mvn -DskipTests -P oracle12 clean package
   # - mvn -DskipTests -P postgresql clean package  -> 
   # [ERROR] Failed to execute goal on project database-goodies: 
   # Could not resolve dependencies for project com.github.susom:database-goodies:jar:1.1-SNAPSHOT:
