--- a/sample.properties
+++ b/sample.properties
@@ -5,6 +5,9 @@
 ###
 ### For security, the above copy command will also generate secure passwords.
 
+# testing build
+
+
 # Embedded database to use by default
 database.url=jdbc:hsqldb:file:target/hsqldb;shutdown=true
 database.user=SA
